--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<link href="http://www.sundaybakeday.com/style.css" rel="stylesheet" type="text/css">
 		<meta property="og:image" content="http://www.sundaybakeday.com/sb.jpg" />
 		<meta property="og:description" content="Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. Grand Rapids, MI." />
-		<meta property="og:url"content="http://www.sundaybakeday.com/" />
+		<meta property="og:url" content="http://www.sundaybakeday.com/" />
+		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Sunday Bakeday" />
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GHEVQK4VSF"></script>
