--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 			<div class="container">
 				<div class="row justify-content-center imageWrapper">
 					<div class="col-12 col-md-4">
-						<img class="img-fluid" src="https://sundaybakeday.com/box.png" alt=""/>
+						<img class="img-fluid" src="https://sundaybakeday.com/pinkbox.png" alt=""/>
 					</div>				
 				</div>
 				<div class="row justify-content-center">			
