--- a/index.html
+++ b/index.html
@@ -436,6 +436,14 @@
 		.imageWrapper img {
 			max-width: 105%;
 		}
+		p.card-text {
+			margin-bottom: 0.5rem;
+		}
+		.card-text span {
+			display:block;
+			padding-top:0.5rem;
+			font-size: 12px;
+		}
 		</style>
 		<script>
 		function initMap() {
@@ -624,7 +632,7 @@
 						<img class="img-fluid" src="https://sundaybakeday.com/pinkbox.png" alt=""/>
 					</div>				
 				</div>
-				<div class="row justify-content-center">			
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -635,7 +643,19 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
+				<div class="row justify-content-center">			
+					<div class="col-12 col-md-12">
+						<div class="card">
+							<div class="card-body fade-in">
+							<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this sunday!</span></h2>
+		    					
+								<p class="card-text">I'm sleeping in this Sunday but there's a form at the bottom of this page where you can sign up to get an email next time bakeday is happening. <span>I promise that's the ONLY email you'll get. I really have nothing else to say to you.</span></p>
+								<div class="d-flex justify-content-between align-items-center"></div>
+							</div>
+						</div>
+					</div>
+				</div>				
 			</div>			
 		</div>
 		<div class="bottomWrapper">
