--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. Grand Rapids, MI."/>
+		<meta name="url" content="https://www.sundaybakeday.com">
 		<title>Sunday Bakeday</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" src="/css/animate.css" crossorigin="anonymous">
@@ -118,7 +121,8 @@
 		     margin-bottom: 20px;
 		}
 		 h2.thisweeksmenu {
-		     font-size: 2rem;
+		     font-size: 3rem;
+			 color: #FC01F3;
 		}
 		 .bd-placeholder-img-lg {
 		     font-size: 3.5rem;
@@ -132,6 +136,9 @@
 		     .card-text {
 			 font-size: 1.2rem;
 		    }
+			h2.thisweeksmenu {
+				font-size: 2rem;
+				}
 			.notThisWeek {
 			display: block;}
 		     .bottom {
@@ -154,6 +161,9 @@
 		     transform: rotate(0deg);
 		     border-radius: 15px;
 		}
+		.card-body.menuItem {
+			min-height: 164px;
+			}
 		 .card-text {
 		     font-size: 1rem;
 		     font-family: 'Open Sans', sans-serif;
@@ -408,6 +418,9 @@
 		     padding:.5em 0;
 		}
 		 @media (max-width: 768px) {
+			.card-body.menuItem {
+				min-height: 0;
+			}
 		     #mc_embed_signup input.email {
 			width:100%;
 			 margin-bottom:5px;
@@ -577,12 +590,26 @@
 			</div>
 		</div>
 		<div class="album text-center">
-			
-			<!--<div class="container">
+			<div class="container">
+				<div class="row justify-content-center imageWrapper fade-in">
+					<div class="col-12 col-md-6 col-lg-4">
+						<img class="img-fluid" src="https://sundaybakeday.com/pinkbox.png" alt=""/>
+					</div>				
+				</div>
+			<div class="container">
+				<div class="row justify-content-center">			
+					<div class="col-12 col-md-12">
+						<div class="card">
+							<div class="fade-in">
+								<h2 class="thisweeksmenu" style="margin-bottom: 0;">menu for Sunday March 6 <span class="notThisWeek"></span></h2>
+							</div>
+						</div>
+					</div>
+				</div>			
 				<div class="row ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body fade-in">
+							<div class="card-body fade-in menuItem">
 		    						<h2>croissant</h2>
 								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
 								<div class="d-flex justify-content-between align-items-center"></div>
@@ -591,13 +618,32 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body fade-in">
+							<div class="card-body fade-in menuItem">
 								<h2>pain au chocolat</h2>
 								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-6 col-lg-3">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h2>lemon raspberry scone</h2>
+								<p class="card-text">Welcome back to the scone zone. A lemon scone full of fat organic raspberries with a lemon glaze.</p>
+								<div class="d-flex justify-content-between align-items-center"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-3 position-relative">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h2>lemon sugar donut with blueberry goat cheese</h2>
+								<p class="card-text">A light, fluffy, lemon-sugar-coated donut with a sweet blueberry goat cheese filling.</p>
+								<div class="d-flex justify-content-between align-items-center"></div>
+						  	</div>
+						</div>
+					</div>	
+					<!--
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -615,8 +661,7 @@
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
-					</div>	
-					<div class="col-12 col-md-12 col-lg-12 position-relative">
+					</div>						<div class="col-12 col-md-12 col-lg-12 position-relative">
 						<div class="card">
 							<div class="card-body fade-in">
 								<h2>experimental bonus item - ADD $2!</h2>
@@ -624,15 +669,9 @@
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
-					</div>						
+					</div>-->					
 				</div>
-			</div>-->
-			<div class="container">
-				<div class="row justify-content-center imageWrapper">
-					<div class="col-12 col-md-6 col-lg-4">
-						<img class="img-fluid" src="https://sundaybakeday.com/pinkbox.png" alt=""/>
-					</div>				
-				</div>
+			</div>
 				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
@@ -644,7 +683,7 @@
 							</div>
 						</div>
 					</div>
-				</div>-->
+				</div>
 				<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
@@ -656,7 +695,7 @@
 							</div>
 						</div>
 					</div>
-				</div>				
+				</div>-->				
 			</div>			
 		</div>
 		<div class="bottomWrapper">
@@ -701,7 +740,7 @@
 				<div class="py-4 col-md-10 col-lg-7 mx-auto text-center">
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
-						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool.</span></div>
+						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></span></div>
 						<div class="mb-3" id="map"></div>						
 						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>.</span></div>
 						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></span></div>
