--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 		}
 		.card-body.menuItem {
 			min-height: 164px;
+			min-height: 124px;
 			}
 		 .card-text {
 		     font-size: 1rem;
@@ -455,6 +456,9 @@
 			padding-top:0.5rem;
 			font-size: 12px;
 		}
+		.pink {
+			color: #fb37f3 !important;
+			}
 		</style>
 		<script>
 		function initMap() {
@@ -594,12 +598,12 @@
 					</div>				
 				</div>
 			<div class="container">
-				<div class="row justify-content-center">
-<!--				
+				<div class="row justify-content-center">				
 					<div class="col-12 col-md-12">
 						<div class="card">
-							<div class="fade-in">
-								<h2 class="thisweeksmenu" style="margin-bottom: 0;">menu for Sunday March 6 <span class="notThisWeek"></span></h2>
+							<div class="card-body fade-in">
+								<h2 class="thisweeksmenu" style="margin-bottom: 0;">menu for Sunday March 20 <span class="notThisWeek"></span></h2>
+								<p class="mb-0 card-text">March 20 is a benefit bakeday for the <a target="_blank" href="https://refugeeeducationcenter.org/">Refugee Education Center of West Michigan</a>. <br/>100% of profits and tips will be donated to help people fleeing conflict and persecution.</p>
 							</div>
 						</div>
 					</div>
@@ -623,6 +627,7 @@
 							</div>
 						</div>
 					</div>
+					<!--
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
@@ -640,11 +645,11 @@
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
-					</div>	
+					</div>	-->
 					
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body fade-in">
+							<div class="card-body fade-in menuItem">
 								<h2>blueberry scone</h2>
 								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
@@ -653,13 +658,14 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-3 position-relative">
 						<div class="card">
-							<div class="card-body fade-in">
+							<div class="card-body fade-in menuItem">
 								<h2>choconut cookie</h2>
 								<p class="card-text">A huge, chewy, chocolate chip cookie with coconut flakes and pecans.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 						</div>
-					</div>						<div class="col-12 col-md-12 col-lg-12 position-relative">
+					</div>						
+					<!--<div class="col-12 col-md-12 col-lg-12 position-relative">
 						<div class="card">
 							<div class="card-body fade-in">
 								<h2>experimental bonus item - ADD $2!</h2>
@@ -670,7 +676,7 @@
 					</div>-->					
 				</div>
 			</div>
-				<div class="row justify-content-center">			
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -681,7 +687,7 @@
 							</div>
 						</div>
 					</div>
-				</div>			
+				</div>-->			
 			</div>			
 		</div>
 		<div class="bottomWrapper">
