--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu" style="margin-bottom: 0;">menu for Sunday March 20 <span class="notThisWeek"></span></h2>
-								<p class="mb-0 card-text">March 20 is a benefit bakeday for the <a target="_blank" href="https://refugeeeducationcenter.org/">Refugee Education Center of West Michigan</a>. 100% of profits and tips will be donated to help people fleeing conflict and persecution so if you want to pay a little extra, knock yourself out.</p>
+								<h2 class="thisweeksmenu mb-2" style="margin-bottom: 0;">menu for Sunday March 20 <span class="notThisWeek"></span></h2>
+								<p class="mb-2 card-text">March 20 is a benefit bakeday for the <a target="_blank" href="https://refugeeeducationcenter.org/">Refugee Education Center of West Michigan</a>. 100% of profits and tips will be donated to help people fleeing conflict and persecution so if you want to pay a little extra, knock yourself out.</p>
 							</div>
 						</div>
 					</div>
