--- a/index.html
+++ b/index.html
@@ -691,9 +691,10 @@
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
-							<h2 class="thisweeksmenu">menu for Sunday March 20: <span class="notThisWeek">sold out!</span></h2>
+							<!-- <h2 class="thisweeksmenu">menu for Sunday March 20: <span class="notThisWeek">sold out!</span></h2>-->
+							<h2 class="thisweeksmenu">this week's menu</h2>
 		    					
-								<p class="card-text">Like Metallica in the 90s, orders for 3/20 have sold out! But you can sign up for the mailing list below to be the first to know next time it's happening!</p>
+								<p class="card-text">No bakeday this week but you can sign up for the mailing list below to be the first to know next time it's happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 								<div id="mc_embed_signup">
 								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -756,7 +757,7 @@
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></span></div>
 						<div class="mb-3" id="map"></div>						
-						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>.</span></div>
+						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that depending on how my delivery route shakes out, I might be delivering any time from about 7.</span></div>
 						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></span></div>
 					</div>
 				</div>
