--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		     color: #FFF;
 		     font-family: 'Fredoka One', sans-serif;
 		}
+
 		 a {
 		     color: #FFF;
 		     text-decoration: underline;
@@ -609,9 +610,9 @@
 					</div>				
 				</div>
 			<div class="container">
-				<div class="row justify-content-center">				
+				<!--<div class="row justify-content-center">				
 					<div class="col-12 col-md-12">
-						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday April 10 <span class="notThisWeek"></span></h2>
+						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday April 10 <span class="notThisWeek">test</span></h2>
 					</div>
 				</div>			
 				<div class="row ">				
@@ -651,15 +652,14 @@
 						  	</div>
 						</div>
 					</div>						
-				</div>
-				<!--<div class="row justify-content-center">			
+				</div>-->
+				<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
-							<h2 class="thisweeksmenu">menu for Sunday March 20: <span class="notThisWeek">sold out!</span></h2>
-							<h2 class="thisweeksmenu">this week's menu</h2>
+							<h2 class="thisweeksmenu">menu for Sunday April 10: <span class="notThisWeek">sold out!</span></h2>
 		    					
-								<p class="card-text">No bakeday this week but you can sign up for the mailing list below to be the first to know next time it's happening!</p>
+								<p class="card-text">Sorry, you missed it! But you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 								<div id="mc_embed_signup">
 								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -675,7 +675,7 @@
 							</div>
 						</div>
 					</div>
-				</div>-->			
+				</div>			
 			</div>			
 		</div>
 		<div class="bottomWrapper">
