--- a/index.html
+++ b/index.html
@@ -751,8 +751,20 @@
 					<h2 class="">contact</h2>
 					<div class="mb-0 contact text-center">
 						<div class="">
-							<div>
-								<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:orders@sundaybakeday.com">email me</a>.</p>
+							<div class="mb-5">
+								<p class="mb-2">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:orders@sundaybakeday.com">email me</a>.</p>
+								<p class="answer">You can also sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
+								<div class="d-flex justify-content-between align-items-center"></div>
+								<div id="mc_embed_signup" class="mb-5">
+								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    								<div id="mc_embed_signup_scroll">
+									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
+        								<div class="clear foot">
+           									<input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+       									</div>
+    								</div>
+								</form>
 							</div>
 							<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>
 						</div>
@@ -763,4 +775,5 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUnGd-MaeP0IlSu2G2dc7hlsx0Sy2GVUg&callback=initMap&v=weekly" async></script>
 	</body>
 </html>
+
 
