--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 				<div class="py-4 col-md-12 mx-auto text-center">
 					<h2 class="">how it works</h2>
 					<ol class="mb-0 howitworks text-center">
-						<li class="py-2"><span>Make sure you definitely live in Grand Rapids.</span>I would love to bring your pastries to Kalamazoo but I'm just one cool guy with a lot of deliveries to make. Check the map below to see if you're in the delivery zone. If you're not sure, <a href="mailto:orders@sundaybakeday.com">email me</a>!</li>
+						<li class="py-2 notewrapper"><span>Make sure you definitely live in Grand Rapids.</span><span class="note pt-2">I would love to bring your pastries to Kalamazoo but I'm just one cool guy with a lot of deliveries to make. Check the map below to see if you're in the delivery zone. If you're not sure, <a href="mailto:orders@sundaybakeday.com">email me</a>!</span></li>
 						<li class="py-2 notewrapper"><span>Pick any combination of 4 pastries and send me $20.</span><span class="note pt-2">Include your order and address in the message with your payment! Also tell me what buzzer to press if you live in a condo or whatever.</span></li>
 						<li class="py-2"><span>A box of pastries will be delivered to you on Sunday morning before 10am.</span></li>
 					</ol>
