--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
 		    }
 		}
 	     	.logo {
-			width: 140px;
-			height: 140px;
+			width: 190px;
 	    	}			
 		.bd-placeholder-img {
 		     font-size: 1.125rem;
@@ -593,7 +592,7 @@
 		<!-- End Google Tag Manager (noscript) -->	
 		<div class="top text-center">
 			<div class="px-2 pt-4 fade-in">
-				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="Sunday Bakeday logo" width="150" height="150"></a>
+				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto mb-3" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
 				<h1>sunday bakeday</h1>
 				<div class="col-lg-6 mx-auto">
 					<p class="lead mb-2 d-none d-sm-block">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. <br>Grand Rapids, MI.</p>
@@ -656,9 +655,9 @@
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
-							<h2 class="thisweeksmenu">menu for Sunday May 1: <span class="notThisWeek">sold out!</span></h2>
+							<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
 		    					
-								<p class="card-text">Sorry, you missed it! But you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
+								<p class="card-text">I'm sleeping in this weekend but you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 								<div id="mc_embed_signup">
 								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -720,7 +719,8 @@
 					<h2>faqs</h2>
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></span></div>
-						<div class="mb-3" id="map"></div>						
+						<div class="mb-3" id="map"></div>
+						<div class="mb-3"><p class="mb-1">Does Sunday Bakeday happen every Sunday?</p><span class="answer">No. I have stuff to do and I'm quite lazy. There's usually at least one bakeday each month!</span></div>
 						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that depending on how my delivery route shakes out, I might be delivering any time from about 7.</span></div>
 						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></span></div>
 					</div>
