--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 		<!-- End Google Tag Manager (noscript) -->	
 		<div class="top text-center">
 			<div class="px-2 pt-4 fade-in">
-				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto mb-3" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
+				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
 				<h1>sunday bakeday</h1>
 				<div class="col-lg-6 mx-auto">
 					<p class="lead mb-2 d-none d-sm-block">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. <br>Grand Rapids, MI.</p>
