--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -107,7 +108,7 @@
 		    }
 		}
 	     	.logo {
-			width: 190px;
+			width: 130px;
 	    	}			
 		.bd-placeholder-img {
 		     font-size: 1.125rem;
@@ -160,7 +161,7 @@
 		 .card-body {
 		     background: #FC01F3;
 		     color: #fff;
-		     padding: 1rem;
+		     padding: 0.8rem;
 		     transform: rotate(0deg);
 		     border-radius: 15px;
 		}
@@ -602,31 +603,32 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center imageWrapper fade-in">
+				<!--<div class="row justify-content-center imageWrapper fade-in">
 					<div class="col-12 col-md-6 col-lg-4">
 						<img class="img-fluid" src="https://sundaybakeday.com/pinkbox.png" alt=""/>
 					</div>				
-				</div>
+				</div>-->
 			<div class="container">
-				<!--<div class="row justify-content-center">				
+				<div class="row justify-content-center">				
 					<div class="col-12 col-md-12">
-						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday April 10 <span class="notThisWeek">test</span></h2>
+						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday May 22<span class="notThisWeek"></span></h2>
 					</div>
 				</div>			
 				<div class="row ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body fade-in menuItem">
-		    						<h2>croissant</h2>
+							<div class="card-body fade-in menuItem mb-2">
+		    						<h2>#1 croissant</h2>
 								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
+							
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-								<h2>pain au chocolat</h2>
+								<h2>#2 pain au chocolat</h2>
 								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -635,7 +637,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-								<h2>blueberry scone</h2>
+								<h2>#3 blueberry scone</h2>
 								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -643,15 +645,16 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-3 position-relative">
 						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h2>choconut cookie</h2>
-								<p class="card-text">A huge, chewy, chocolate chip cookie with coconut flakes and pecans.</p>
+							<div class="card-body fade-in menuItem mb-2">
+								<h2>#4 choco-NO-nut cookie</h2>
+								<p class="card-text">A bakeday classic without the nuts! A big chocolate chip cookie with coconut flakes.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
+							
 						</div>
 					</div>						
-				</div>-->
-				<div class="row justify-content-center">			
+				</div>
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -673,7 +676,7 @@
 							</div>
 						</div>
 					</div>
-				</div>			
+				</div>	-->		
 			</div>			
 		</div>
 		<div class="bottomWrapper">
