--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<meta property="og:url" content="http://www.sundaybakeday.com/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Sunday Bakeday" />
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<!-- Global site tag (gtag.js) Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GHEVQK4VSF"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
