--- a/index.html
+++ b/index.html
@@ -658,9 +658,9 @@
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
-							<h2 class="thisweeksmenu">May 22 bakeday is <span class="notThisWeek">sold out!</span></h2>
+							<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
 		    					
-								<p class="card-text">Aw man, you missed it! But you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
+								<p class="card-text">I'm sleeping in this Sunday but you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 								<div id="mc_embed_signup">
 								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
