--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -609,12 +610,13 @@
 					</div>				
 				</div>-->
 			<div class="container">
-				<!--<div class="row justify-content-center">				
-					<div class="col-12 col-md-12">
-						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday May 22<span class="notThisWeek"></span></h2>
+				<div class="row justify-content-center">				
+					<div class="col-12 col-md-12 col-lg-9">
+						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday July 10<span class="notThisWeek"></span></h2>
+						<p class="pink mb-4 p-3" style="background: #FFF;border-radius: 1rem;" >100% of the proceeds from this bakeday will be donated to the <a class="pink" href="https://midwestaccesscoalition.org/">Midwest Access Coalition</a> in support of their mission to provide access to safe, free, legal abortions for everyone.</p>
 					</div>
 				</div>			
-				<div class="row ">				
+				<div class="row justify-content-center ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem mb-2">
@@ -629,11 +631,13 @@
 						<div class="card">
 							<div class="card-body fade-in menuItem">
 								<h2>#2 pain au chocolat</h2>
-								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
+								<p class="card-text">What's better than a croissant? A croissant with 3 sticks of chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="row justify-content-center ">	
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
@@ -646,15 +650,25 @@
 					<div class="col-12 col-md-6 col-lg-3 position-relative">
 						<div class="card">
 							<div class="card-body fade-in menuItem mb-2">
-								<h2>#4 choco-NO-nut cookie</h2>
+								<h2>#4 jalapeno cheddar scone</h2>
+								<p class="card-text">It is what it sounds like. People lost their minds for these last time.</p>
+								<div class="d-flex justify-content-between align-items-center"></div>
+						  	</div>
+						</div>
+					</div>						
+					<div class="col-12 col-md-6 col-lg-3 position-relative">
+						<div class="card">
+							<div class="card-body fade-in menuItem mb-2">
+								<h2>#5 choco-NO-nut cookie</h2>
 								<p class="card-text">A bakeday classic without the nuts! A big chocolate chip cookie with coconut flakes.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 						  	</div>
 							
 						</div>
-					</div>						
-				</div>-->
-				<div class="row justify-content-center">			
+					</div>	
+
+				</div>
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -676,7 +690,7 @@
 							</div>
 						</div>
 					</div>
-				</div>	
+				</div>-->
 			</div>			
 		</div>
 		<div class="bottomWrapper">
@@ -723,7 +737,7 @@
 					<div class="mb-0 faqs text-center">
 						<div class="mb-3"><p class="mb-1">I live on the Mongolian steppe - will you deliver pastries to me?</p><span class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></span></div>
 						<div class="mb-3" id="map"></div>
-						<div class="mb-3"><p class="mb-1">Does Sunday Bakeday happen every Sunday?</p><span class="answer">No. I have stuff to do and I'm quite lazy. There's usually at least one bakeday each month!</span></div>
+						<div class="mb-3"><p class="mb-1">Does bakeday happen every Sunday?</p><span class="answer">No. I have stuff to do and I'm quite lazy. There's usually at least one bakeday each month!</span></div>
 						<div class="mb-3"><p class="mb-1">I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</p><span class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that depending on how my delivery route shakes out, I might be delivering any time from about 7.</span></div>
 						<div class="mb-3"><p class="mb-1">My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</p><span class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></span></div>
 					</div>
@@ -747,4 +761,5 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUnGd-MaeP0IlSu2G2dc7hlsx0Sy2GVUg&callback=initMap&v=weekly" async></script>
 	</body>
 </html>
+
 
