--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 				<div class="row justify-content-center ">				
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body fade-in menuItem mb-2">
+							<div class="card-body fade-in menuItem">
 		    						<h2>#1 croissant</h2>
 								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
 								<div class="d-flex justify-content-between align-items-center"></div>
