--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 					</div>						
 					<div class="col-12 col-md-6 col-lg-3 position-relative">
 						<div class="card">
-							<div class="card-body fade-in menuItem mb-2">
+							<div class="card-body fade-in menuItem">
 								<h2>#5 choco-NO-nut cookie</h2>
 								<p class="card-text">A bakeday classic without the nuts! A big chocolate chip cookie with coconut flakes.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
