--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 		}
 		.bottomWrapper {
 			background-image: linear-gradient(182deg, #fed101 3%, #FC01F3 calc(3% + 2px));
+                        padding-top: 20px;
 		}
 		.fade-in {
 			animation: fadeIn 1s;
