--- a/index.html
+++ b/index.html
@@ -421,6 +421,9 @@
 		    }
 			.bottomWrapper {
 				background-image: linear-gradient(182deg, #fed101 2%, #FC01F3 calc(2% + 2px));
+		    }
+			.notthisweek {
+				display: block;
 			}
 		}	
 		</style>
