--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		}
 		h2.thisweeksmenu {
 		    font-size: 2rem;
+                    color: #FFF;
 		}
 		.top {
 			background-image: linear-gradient(178deg, #FC01F3 85%, #fed101 calc(85% + 2px));
