--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -383,7 +384,7 @@
 			border-radius: 1rem;
 		}
 		.pink {
-			color: #fb37f3;
+			color: #fb37f3 !important;
 			}
 		.yellow {
 			color: #fed101;
@@ -564,9 +565,9 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<!--<div class="row justify-content-center">				
+				<div class="row justify-content-center">				
 					<div class="col-md-12 col-lg-9">
-						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday August 14<span class="notThisWeek"></span></h2>
+						<h2 class="thisweeksmenu pink mb-3" style="margin-bottom: 0;">menu for Sunday August 28<span class="notThisWeek"></span></h2>
 					</div>
 				</div>			
 				<div class="row justify-content-center ">				
@@ -574,51 +575,41 @@
 						<div class="card">
 							<div class="card-body fade-in menuItem">
 		    						<h4>#1 croissant</h4>
-								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
+								<p class="card-text">Everyone loves a classic croissant! Made with organic flour and really expensive butter. </p>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-								<h4>#2 pain au chocolat</h4>
-								<p class="card-text">What's better than a croissant? A croissant with 3 sticks of chocolate inside it!</p>
+								<h4>#2 blueberry scone</h4>
+								<p class="card-text">The scone that makes people say "I don't normally like scones but these are amazing".</p>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="row justify-content-center">	
+					</div>	
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-								<h4>#3 blueberry scone</h4>
-								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
+								<h4>#3 jalapeno cheddar scone</h4>
+								<p class="card-text">With sharp cheddar and organic jalapenos from the bakeday garden! Perfect for breakfast or lunch!</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-								<h4>#4 jalapeno cheddar scone</h4>
-								<p class="card-text">It is what it sounds like. People lost their minds for these last time.</p>
+								<h4>#4 choconut cookie</h4>
+								<p class="card-text">Pecans, coconut flakes, and THREE DIFFERENT TYPES of chocolate chips make this a bakeday fav.</p>
 						  	</div>
 						</div>
 					</div>						
-					<div class="col-12 col-md-6 col-lg-3">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#5 choco-NO-nut cookie</h4>
-								<p class="card-text">A bakeday classic without the nuts! A big chocolate chip cookie with coconut flakes.</p>
-						  	</div>
-						</div>
 					</div>
 				</div>
-				-->
-				<div class="row justify-content-center">			
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-10">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday August 14: <span class="notThisWeek">sold out!</span></h2>
+								<h2 class="thisweeksmenu">menu for Sunday August 28: <span class="notThisWeek">sold out!</span></h2>
 								<p class="card-text">You missed it this time but bakeday will be back soon! Sign up for the mailing list below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -726,6 +717,10 @@
 							<p class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that you'll have to get your ass out of bed on Sunday morning to pay me.</p>
 						</div>
 						<div class="mb-3">
+							<h4>What happens if I live in a condo and I don't answer the buzzer when you try to deliver my pastries?</h4>
+							<p class="answer">I'll do everything I can think of to get in touch with you and then I'll eat your pastries the next day.</p>
+						</div>						
+						<div class="mb-3">
 							<h4>My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</h4>
 							<p class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></p>
 						</div>
@@ -787,3 +782,4 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUnGd-MaeP0IlSu2G2dc7hlsx0Sy2GVUg&callback=initMap&v=weekly" async></script>
 	</body>
 </html>
+
