--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -717,17 +718,21 @@
 						</div>
 						<div class="mb-3" id="map"></div>
 						<div class="mb-3">
+							<h4>My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</h4>
+							<p class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></p>
+						</div>		
+						<div class="mb-3">
+							<h4>I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</h4>
+							<p class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that you'll have to get your ass out of bed on Sunday morning to pay me.</p>
+						</div>							
+						<div class="mb-3">
 							<h4>Does bakeday happen every Sunday?</h4>
 							<p class="answer">No. I have stuff to do and I'm quite lazy. There's usually at least one bakeday each month!</p>
 						</div>
 						<div class="mb-3">
-							<h4>I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</h4>
-							<p class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that you'll have to get your ass out of bed on Sunday morning to pay me.</p>
-						</div>						
-						<div class="mb-3">
-							<h4>My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</h4>
-							<p class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></p>
-						</div>					
+							<h4>You're incredibly handsome. Have you ever thought about taking over the modeling world?</h4>
+							<p class="answer">Taking over the modeling world would mean depriving the culinary world (within 5 miles  of central Grand Rapids) of my pastry-making skills. I couldn't do that to the community.</p>
+						</div>							
 					</div>
 				</div>
 				<hr class="col-2">
@@ -786,6 +791,7 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUnGd-MaeP0IlSu2G2dc7hlsx0Sy2GVUg&callback=initMap&v=weekly" async></script>
 	</body>
 </html>
+
 
 
 
