--- a/index.html
+++ b/index.html
@@ -714,22 +714,27 @@
 					<h2>faqs</h2>
 					<div class="mb-0 faqs">
 						<div class="mb-3">
-							<h4>I live on the Mongolian steppe - will you deliver pastries to me?</h4>
+							<h4>"I live on the Mongolian steppe - will you deliver pastries to me?"</h4>
 							<p class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></p>
 						</div>
 						<div class="mb-3" id="map"></div>
 						<div class="mb-3">
-							<h4>My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake lots of pastries for the party?</h4>
+							<h4>"My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake some pastries for the party?"</h4>
 							<p class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></p>
-						</div>		
+						</div>	
 						<div class="mb-3">
-							<h4>I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?</h4>
-							<p class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that you'll have to get your ass out of bed on Sunday morning to pay me.</p>
+							<h4>"Does bakeday happen every Sunday?"</h4>
+							<p class="answer">No. I have stuff to do and I'm quite lazy. I try to do it every couple of weeks! <a href="http://eepurl.com/hS8rsf">Click here</a> to get an email next time bakeday is happening!</p>
 						</div>							
 						<div class="mb-3">
-							<h4>Does bakeday happen every Sunday?</h4>
-							<p class="answer">No. I have stuff to do and I'm quite lazy. There's usually at least one bakeday each month!</p>
-						</div>						
+							<h4>"I use Venmo like twice a year to pay my babysitter or whatever. How do I order with Venmo?"</h4>
+							<p class="answer">It's easy! Just send $20 plus an extravagant tip to <a href="https://venmo.com/sundaybakeday">@sunday.bakeday</a> and include your order and address in the message. Here's an example of a typical order:</p>
+							<p style="font-style: italic;">"#1 #3 #4 #5 please! 420 Diamond Ave SE. Please leave at the side door. Thanks! I love you."</p>
+						</div>							
+						<div class="mb-3">
+							<h4>"I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?"</h4>
+							<p class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that you'll have to get your ass out of bed on Sunday morning to pay me.</p>
+						</div>							
 					</div>
 				</div>
 				<hr class="col-2">
